update daud web id

--- a/modules/views/components/about.pug
+++ b/modules/views/components/about.pug
@@ -3,7 +3,7 @@ section(id="about", class="section section-about wow fadeInUp", style="visibilit
         div(class="row")
             div(class="col-sm-4")
                 div(class="photo-profile")
-                    img(src="/themes/default/img/me.png", alt="Akhmad Abdul Rohman", width="200")
+                    img(src="/themes/default/img/me.png", alt="M. Daud Anugerah", width="200")
                 //- a(href="#", disabled)
                     div(class="download-resume")
                         i(aria-hidden="true", class="fa fa-cloud-download")
@@ -13,39 +13,38 @@ section(id="about", class="section section-about wow fadeInUp", style="visibilit
                     span(class="text-available", style="color: rgb(234, 90, 51);") Available on freelance
             div(class="col-sm-8")
                 div(class="info-profile")
-                    h3(class="pad0 mg-t10 fs23 color-f35b25 d-block d-sm-none") Akhmad Abdul Rohman
+                    h3(class="pad0 mg-t10 fs23 color-f35b25 d-block d-sm-none") M. Daud Anugerah
                     span(class="mg-b10 color-f35b25 d-block d-sm-none") web developer &amp; backend developer
-                    h2(class="d-none d-sm-block") Akhmad Abdul Rohman
+                    h2(class="d-none d-sm-block") M. Daud Anugerah
                     h3(class="d-none d-sm-block") web developer &amp; backend developer
                     <p>
-                        | Hi, Saya Akhmad Abdul Rohman. Seorang Web Developer
-                        | dengan lebih dari #{ new Date().getFullYear() - 2013 }th pengalaman. Pengalaman dalam
+                        | Hi, Saya M. Daud Anugerah. Seorang Web Developer
+                        | dengan lebih dari #{ new Date().getFullYear() - 2019 }th pengalaman. Pengalaman dalam
                         | segala situasi dari siklus development untuk
                         | project-project web yang dikerjakan. Saya mempunyai
                         | pengalaman dibeberapa programming diantaranya NodeJS,
-                        | PHP, Mysql, HTML5, CSS3, jQuery. Dan background kuat
-                        | pada Server &amp; Manajemen tim.
+                        | PHP, Mysql, HTML5, CSS3, jQuery.
                     </p>
                     div(class="row")
                         div(class="col-sm-12 col-md-6")
                             ul(class="ul-info")
                                 li(class="li-info")
                                     span(class="title-info") Age
-                                    span(class="info") #{ new Date().getFullYear() - 1994 } Tahun
+                                    span(class="info") #{ new Date().getFullYear() - 1996 } Tahun
                                 li(class="li-info")
                                     span(class="title-info") Address
-                                    span(class="info") Jl. Tebet Barat VIB No. 1
+                                    span(class="info") Jl. Tebet Barat Raya No. 3
                                 li(class="li-info")
                                     span(class="title-info") Email
-                                    span(class="info") rohmanmail@gmail.com
+                                    span(class="info") daudcanugerah@gmail.com
                         div(class="col-sm-12 col-md-6")
                             ul(class="ul-info")
                                 li(class="li-info")
                                     span(class="title-info") Phone
-                                    span(class="info") 0823-3230-3931
+                                    span(class="info") 0831-0131-7515
                                 li(class="li-info")
                                     span(class="title-info") Website
-                                    span(class="info") rohman.web.id
+                                    span(class="info") daud.web.id
                                 li(class="li-info")
                                     span(class="title-info") Nationality
                                     span(class="info") Indonesia
@@ -53,14 +52,14 @@ section(id="about", class="section section-about wow fadeInUp", style="visibilit
                             span(class="title-links") Social Links
                             ul(class="ul-social-links")
                                 li(class="li-social-links")
-                                    a(href="https://facebook.com/rohmanwebid001", target="blank")
+                                    a(href="https://facebook.com/#", target="blank")
                                         i(aria-hidden="true", class="fa fa-facebook")
                                 li(class="li-social-links")
-                                    a(href="https://twitter.com/rohmanwebid", target="blank")
+                                    a(href="https://twitter.com/#", target="blank")
                                         i(aria-hidden="true", class="fa fa-twitter")
                                 li(class="li-social-links")
-                                    a(href="https://plus.google.com/+RohmanAhmadGo", target="blank")
+                                    a(href="https://plus.google.com/#", target="blank")
                                         i(aria-hidden="true", class="fa fa-google-plus")
                                 li(class="li-social-links")
-                                    a(href="https://linkedin.com/in/rohmanahmad001", target="blank")
+                                    a(href="https://linkedin.com/in/#", target="blank")
                                         i(aria-hidden="true", class="fa fa-linkedin")
