--- a/modules/views/components/educations.pug
+++ b/modules/views/components/educations.pug
@@ -10,23 +10,5 @@ section(id="experience", class="section section-experience wow fadeInUp", style=
                     div(class="period-experience")
                         img(src="/themes/default/img/stt.png", alt="STT Malang", width="110")
                     h3(class="specialty-name") Diploma 3
-                    h3(class="company-name") Sekolah Tinggi Tehnik Malang
+                    h3(class="company-name") Universitas Negeri Bandung
                     p(class="prg-experience") Informatics Engineering
-                div(class="experience-content")
-                    div(class="period-experience")
-                        img(src="/themes/default/img/stt.png", alt="STT Malang", width="110")
-                    h3(class="specialty-name") Diploma 1
-                    h3(class="company-name") Sekolah Tinggi Tehnik Malang
-                    p(class="prg-experience") Informatics Engineering
-                div(class="experience-content")
-                    div(class="period-experience")
-                        img(src="/themes/default/img/wec.png", alt="WEC Malang", width="110")
-                    h3(class="specialty-name") Diploma 1
-                    h3(class="company-name") Wearness Education Center Malang
-                    p(class="prg-experience") Informatics Engineering
-                div(class="experience-content")
-                    div(class="period-experience", style="padding-top: 40px;padding-bottom: 40px;")
-                        img(src="/themes/default/img/spectrum.png", alt="spectrum.co.id", width="110")
-                    h3(class="specialty-name") Mikrotik Profesional Training (MTCNA)
-                    h3(class="company-name") Spectrum co id
-                    p(class="prg-experience")
