--- a/modules/views/components/head.pug
+++ b/modules/views/components/head.pug
@@ -2,7 +2,7 @@ head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width,initial-scale=1")
-    title About Me | rohmanweb
+    title About Me | daudweb
     link(rel="icon", type="image/png", sizes="32x32", href="/themes/default/img/icons/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/themes/default/img/icons/favicon-16x16.png")
     <!--[if IE]>
@@ -11,12 +11,12 @@ head
     meta(name="theme-color", content="#4DBA87")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-status-bar-style", content="black")
-    meta(name="apple-mobile-web-app-title", content="rohmanweb")
+    meta(name="apple-mobile-web-app-title", content="daudweb")
     link(rel="apple-touch-icon", href="/themes/default/img/icons/apple-touch-icon-152x152.png")
     link(rel="mask-icon", href="/themes/default/img/icons/safari-pinned-tab.svg" color="#4DBA87")
     meta(name="msapplication-TileImage", content="/themes/default/img/icons/msapplication-icon-144x144.png")
     meta(name="msapplication-TileColor", content="#000000")
-    meta(name="description", content="rohmanwebid, need a profesional programmer? it's me.")
+    meta(name="description", content="daudwebid, need a profesional programmer? it's me.")
     link(href="/vendors/bootstrap-4/css/bootstrap.min.css", rel="stylesheet")
     link(rel="stylesheet", href="/themes/default/css/light.css")
     link(rel="stylesheet", href="/themes/default/css/color.css")
