--- a/modules/views/components/skills.pug
+++ b/modules/views/components/skills.pug
@@ -69,10 +69,10 @@ section(id="skills" class="section section-skills fadeInUp" style="visibility: v
                                     span Vue JS
                                 div(class="skill")
                                     i(aria-hidden="true", class="fa fa-check-square-o")
-                                    span Angular JS
+                                    span React JS
                                 div(class="skill")
                                     i(aria-hidden="true", class="fa fa-check-square-o")
-                                    span Codeigniter
+                                    span Laravel
                         div(class="col-sm-6")
                             div(class="other")
                                 div(class="skill")
@@ -80,7 +80,7 @@ section(id="skills" class="section section-skills fadeInUp" style="visibility: v
                                     span Express JS
                                 div(class="skill")
                                     i(aria-hidden="true", class="fa fa-check-square-o")
-                                    span Restify JS
+                                    span Meteor JS
                                 div(class="skill")
                                     i(aria-hidden="true", class="fa fa-check-square-o")
                                     span Adonis JS
