--- a/modules/views/components/educations.pug
+++ b/modules/views/components/educations.pug
@@ -8,7 +8,7 @@ section(id="experience", class="section section-experience wow fadeInUp", style=
             div(class="all-experience hidden-xs show-sm show-md show-lg")
                 div(class="experience-content")
                     div(class="period-experience")
-                        img(src="/themes/default/img/stt.png", alt="STT Malang", width="110")
+                        img(src="/themes/default/img/poltek.jpeg", alt="Politeknik Negeri Subang", width="110")
                     h3(class="specialty-name") Diploma 3
-                    h3(class="company-name") Universitas Negeri Bandung
+                    h3(class="company-name") Politeknik Negeri Subang
                     p(class="prg-experience") Informatics Engineering
