--- a/modules/views/components/skills.pug
+++ b/modules/views/components/skills.pug
@@ -44,19 +44,19 @@ section(id="skills" class="section section-skills fadeInUp" style="visibility: v
                     div(class="row")
                         div(class="col-sm-4")
                             div(class="circle")
-                                div(data-percent="90", class="chart", data-bar-color="#f35b25")
+                                div(data-percent="90", class="chart", data-bar-color="#6fd586")
                                     div(class="inner-text", style="font-size: 9px;") 90%
                                 div(class="name-circle")
                                     span Teamwork
                         div(class="col-sm-4")
                             div(class="circle")
-                                div(data-percent="80" class="chart", data-bar-color="#f35b25")
+                                div(data-percent="80" class="chart", data-bar-color="#6fd586")
                                     div(class="inner-text", style="font-size: 9px;") 80%
                                 div(class="name-circle")
                                     span Creativity
                         div(class="col-sm-4")
                             div(class="circle")
-                                div(data-percent="60", class="chart", data-bar-color="#f35b25")
+                                div(data-percent="60", class="chart", data-bar-color="#6fd586")
                                     div(class="inner-text", style="font-size: 9px;") 60%
                                 div(class="name-circle")
                                     span English
