--- a/modules/views/components/head.pug
+++ b/modules/views/components/head.pug
@@ -2,25 +2,28 @@ head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width,initial-scale=1")
-    title About Me | daudweb
-    link(rel="icon", type="image/png", sizes="32x32", href="/themes/default/img/icons/favicon-32x32.png")
-    link(rel="icon", type="image/png", sizes="16x16", href="/themes/default/img/icons/favicon-16x16.png")
+    title Malangsoftware
+    meta(name="keywords", content="malangsoftware")
+    meta(name="description", content="Temukan solusi IT anda bersama kami, bersama Malangsoftware pekerjaan anda lebih mudah dan cepat selesai.")
+    //- link(rel="icon", type="image/png", sizes="32x32", href="/themes/default/img/icons/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="/themes/default/img/icons/favicon.ico")
     <!--[if IE]>
     link(rel="shortcut icon", href="/themes/default/img/icons/favicon.ico")
     <![endif]-->
+    link(rel="manifest", href="/themes/default/manifest.json")
     meta(name="theme-color", content="#4DBA87")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-status-bar-style", content="black")
-    meta(name="apple-mobile-web-app-title", content="daudweb")
+    meta(name="apple-mobile-web-app-title", content="hello")
     link(rel="apple-touch-icon", href="/themes/default/img/icons/apple-touch-icon-152x152.png")
-    link(rel="mask-icon", href="/themes/default/img/icons/safari-pinned-tab.svg" color="#4DBA87")
+    link(rel="mask-icon", href="/themes/default/img/icons/safari-pinned-tab.svg", color="#4DBA87")
     meta(name="msapplication-TileImage", content="/themes/default/img/icons/msapplication-icon-144x144.png")
     meta(name="msapplication-TileColor", content="#000000")
-    meta(name="description", content="daudwebid, need a profesional programmer? it's me.")
-    link(href="/vendors/bootstrap-4/css/bootstrap.min.css", rel="stylesheet")
-    link(rel="stylesheet", href="/themes/default/css/light.css")
-    link(rel="stylesheet", href="/themes/default/css/color.css")
-    link(rel="stylesheet", href="/themes/default/css/custom.css")
-    link(rel="stylesheet", href="/themes/default/css/daud.css")
+    //- link(rel="preload", href="/themes/default/js/vendor.71aa93f388b664069137.js", as="script")
+    //- link(rel="preload", href="/themes/default/js/app.c89f3db524b287444c5d.js", as="script")
+    //- link(rel="preload", href="/themes/default/css/app.89bf3461c60799d80e953d6e04e9b7bd.css" as="style")
+    //- link(rel="preload", href="/themes/default/js/manifest.2ae2e69a05c33dfc65f8.js", as="script")
+    link(href="/vendors/bootstrap-3/css/bootstrap.min.css", rel="stylesheet")
+    link(href="/themes/default/css/regna.css", rel="stylesheet")
+    link(href="/themes/default/css/custom.css", rel="stylesheet")
     link(href="/vendors/fontawesome-4/css/font-awesome.min.css", rel="stylesheet")
-</head>
